--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,14 @@
 theme: jekyll-theme-minimal
+topnav_title: CCG
+homepage_title: Cognitive Computation Group
+site_title: CogComp
+company_name: CogComp
+footer_image_location: /common_images/logo.png
+# variables
+
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+    values:
+      layout: "default"
