--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: CogComp
-description: [The Cognitive Computation Group is led by Prof Dan Roth, Department of Computer and Information Science, University of Pennsylvania.]
+description: [The Cognitive Computation Group is led by Prof Dan Roth in the Department of Computer and Information Science at University of Pennsylvania.]
 logo: ccg.png
